# auth-token-exchange

./: Dockerfile  Makefile  README.md  compose.env  compose.yaml  mypy.ini  project.json  pylintrc  pyproject.toml  requirements.txt
.docker/: compose_all.yaml
.github/workflows/: ci.yaml  release.yaml  unit_tests.yaml
client/: .env  index.html  package.json
client/src/: App.tsx  AppLayout.tsx  AppRouter.tsx  index.css  main.tsx  style.css
client/src/components/: Button.tsx  Footer.tsx  Header.tsx  Loader.tsx  LogoHeader.tsx  MenuBar.tsx  index.ts
client/src/pages/: AccountPage.tsx  Home.tsx  HomePage.tsx  MakeChangePage.tsx  Profile.tsx  ProfilePage.tsx  _404_.tsx  index.ts
client/src/utils/: index.ts
kickstart/: kickstart.json
kickstart/css/: styles.css
scripts/: release
src/: __init__.py  __main__.py  config.py  main.py  server.py
src/authexchange/: __init__.py  __main__.py  config.py  server.py
src/authexchange/blueprints/: __init__.py
src/authexchange/utils/: b64.py  state.py
src/blueprints/: __init__.py  auth.py
src/blueprints/auth/: __init__.py  state.py
src/controllers/auth/: __init__.py  callback.py  login.py  logout.py  refresh.py  register.py  user.py
src/routes/: __init__.py
src/routes/auth/: controller.py
src/texserv/: __init__.py  __main__.py  config.py  server.py
src/texserv/blueprints/: __init__.py
src/texserv/utils/: __init__.py  b64.py  state.py
src/token_exchange/: __init__.py  config.py  main.py  server.py
src/token_exchange/blueprints/: __init__.py
src/utils/: b64.py  state.py
tests/: test_b64.py  test_example.py  test_server.py  test_state.py
(+34 files in other folders)
