[project]
authors = [
  {name = "Robert Adams", email = "r0b4dams@gmail.com"},
]
dependencies = [
  "flask",
  "flask-cors",
  "gunicorn",
  "pkce",
  "requests",
]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "texserv"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
texserv = "texserv.__main__:cli"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core<4"]
