[project]
authors = [
  {name = "Robert Adams", email = "r0b4dams@gmail.com"},
]
dependencies = [
  "Flask ~= 3.0.3",
  "Flask-Cors ~= 4.0.0",
  "gunicorn ~= 22.0.0",
  "pkce ~= 1.0.3",
  "requests ~= 2.31.0",
]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "authexchange"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "black ~= 24.4.2",
  "mypy ~= 1.10.0",
  "pylint ~= 3.1.0",
  "pytest ~= 8.2.0",
]

[project.scripts]
authexchange = "authexchange.__main__:cli"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core<4"]
